src/stylesheets/preferences.scss
$preference: #{"." + getGlobal("CONFIG.CLASS.preference")};
$checkboxLabelSpacing: 0.5em;

body > * {
    display: none; // to hide everything except the form in iOS Safari
}

form##{getGlobal("CONFIG.USERSCRIPT_ID")} {
    width: 640px;
    margin: 32px auto;
    display: block; // to not hide the form

    img {
        max-width: 100%;
    }

    aside, ##{getGlobal("CONFIG.ID.editingTools")} {
        transition-property: opacity;
        transition-duration: 250ms;
    }

    #{$preference} {
        clear: left;

        > label::after {
            content: ":\a0";
        }

        input + label::after, select + label::after, textarea + label::after {
            content: unset;
        }

        // Unsupported preference notice
        mark {
            border: 3px solid #D00;
            color: #D00;
            display: inline-block;
            font: bold 1em monospace;
            margin: 2px;
            padding: 1em;
        }
    }

    .#{getGlobal("SITE.CLASS.fieldset")} {
        padding: 8px 16px;
        margin: 16px 0 24px 0; // more than default

        > legend {
            padding: 0 4px;
        }
    }

    .#{getGlobal("CONFIG.CLASS.radioButtonPreference")} {
        display: inline-block;
        width: -webkit-fit-content;
        width: -moz-fit-content;
        width: fit-content;

        label::after {
            content: unset;
        }

        > label:first-child::after {
            content: ":";
        }

        input[type="radio"] {
            margin-left: 16px;
        }
    }

    textarea {
        box-sizing: border-box;
        display: block;
        height: 6em;
        width: 100%;
    }

    $inline: #{"." + getGlobal("CONFIG.CLASS.inlinePreference")};
    $primaryInline: #{"." + getGlobal("CONFIG.CLASS.primaryInlinePreference")};
    #{$inline} {
        float: left;

        // A primary inline preference should be preceded by a "line break":
        &#{":not(" + $primaryInline + ")"} {
            clear: unset;
        }

        > label::after {
            content: unset;
        }

        input[type="text"], input[type="number"], input[type="time"] {
            margin: 0;
        }
    }

    $realInline: $inline + ":not(" + $primaryInline + ")";
    #{$realInline} label::after,
    #{$realInline} label:first-child::before {
        content: "\a0";
    }

    #{$realInline} input[type="checkbox"] {
        margin-left: 1.5*$checkboxLabelSpacing;
    }

    input {
        vertical-align: middle;
    }

    label {
        padding: 6px 0;
        margin: 0;

        kbd {
            font-family: monospace;
            background-color: rgba(160, 160, 160, 0.05);
            border: 1px solid rgba(160, 160, 160, 0.15);
            border-radius: 3px;
            padding: 1px 2px;
        }
    }

    input[type="checkbox"] + label, input[type="radio"] + label {
        padding-left: $checkboxLabelSpacing;
    }

    input[type="checkbox"], input[type="radio"] {
        margin: 0;
    }

    input[type="text"], input[type="number"], input[type="time"] {
        margin: 0.33em 0;
        width: 5em;
    }

    input[type="text"] + label::before, input[type="number"] + label::before, input[type="time"] + label::before {
        content: "\a0";
    }

    // More info
    aside {
        display: inline-block;
        margin-left: 12px;
        opacity: 0;
        pointer-events: none;
    }

    #{$preference}:hover > aside {
        opacity: 1;
        transition-duration: 500ms;
    }

    ##{getGlobal("CONFIG.ID.editingTools")} {
        height: getGlobal("CONFIG.EDITING_TOOLS_HEIGHT");
    }

    .#{getGlobal("CONFIG.CLASS.codeInput")}::after {
        color: #D00;
        content: '#{getGlobal("T.preferences.advanced.custom_css_warning")}';
        display: block;
        font-weight: bold;
        margin-top: 0.4em;
        opacity: 0;
        transition: opacity 200ms 100ms;
    }

    .#{getGlobal("CONFIG.CLASS.codeInput")}:hover::after,
    .#{getGlobal("CONFIG.CLASS.codeInput")}:focus-within::after {
        opacity: 1;
    }

    ##{getGlobal("CONFIG.ID.interestsPreferences")} {
        columns: 2;

        .#{getGlobal("CONFIG.CLASS.subforum")} {
            padding-left: 2em;
        }
    }

    .#{getGlobal("CONFIG.CLASS.disabled")} {
        opacity: 0.25;
        pointer-events: none;
    }

    footer {
        text-align: center;
        opacity: 0.8;
    }
}

